# awesome-codex-app-template

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  CLAUDE.md  CODE-QUALITY.md  CONTINUITY.MD  CONTRIBUTING.md  DESIGN.md  LICENSE  MEMORY.MD  Makefile  PLAN.MD  README.md  SECURITY.md  UI-UX-DEVELOPMENT.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
.agents/prompts/: exec-plan.md  linear-completion.md  memory-update.md  notion-sync.md  quality-control.md  security-review.md
.agents/state/: README.md
.claude/: settings.json
.claude/hooks/: post_tool_use_review.py  pre_tool_use_policy.py  session_start.py  stop_quality_gate.py  user_prompt_submit.py
.codex/: config.toml  hooks.json  requirements.toml.example
.codex/hooks/: permission_request.py  post_tool_use_review.py  pre_tool_use_policy.py  session_start.py  stop_quality_gate.py  user_prompt_submit.py
.cursor/: mcp.json
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflow-templates/: deploy-railway.yml  deploy-render.yml  deploy-vercel.yml
.github/workflows/: deploy-pages.yml  publish.yml  quality-gates.yml
apps/api/: AGENTS.md  pyproject.toml
apps/api/app/: auth.py  main.py  settings.py
apps/api/tests/: test_health.py
apps/macos/: AGENTS.md  Package.swift
apps/mcp/: AGENTS.md  pyproject.toml  server.py
apps/mcp/tests/: test_tools.py
apps/mobile/: AGENTS.md  (+5 more)
quality/: budgets.json
(+96 files in other folders)
