[project]
name = "enterprise-api"
version = "0.1.0"
description = "FastAPI service for enterprise monorepo template"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "pyjwt[crypto]>=2.10.0",
  "httpx>=0.28.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
